WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
13828
x/y values on rootmost <svg> elements should be ignored
https://bugs.webkit.org/show_bug.cgi?id=13828
Summary
x/y values on rootmost <svg> elements should be ignored
Antoine Quint
Reported
2007-05-22 13:45:12 PDT
Any <svg> element that is the root of an SVG fragment should have its x and y attributes ignored as per the SVG 1.1 specification. WebKit currently treats those as CSS left/top offsets, or so it seems.
Attachments
Test case for x/y attributes on root-most <svg> element
(899 bytes, application/xhtml+xml)
2007-05-22 13:51 PDT
,
Antoine Quint
no flags
Details
First attempt
(53.56 KB, patch)
2007-05-25 10:18 PDT
,
Rob Buis
oliver
: review+
Details
Formatted Diff
Diff
new fix for feature-branch
(6.14 KB, patch)
2007-10-02 19:51 PDT
,
Eric Seidel (no email)
oliver
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2007-05-22 13:51:50 PDT
Created
attachment 14664
[details]
Test case for x/y attributes on root-most <svg> element For the test to pass, the green SVG square should be rendered aligned to the top-left of the red CSS-rendered square, which is 10 pixels wider and taller.
Rob Buis
Comment 2
2007-05-25 10:18:44 PDT
Created
attachment 14724
[details]
First attempt Not that happy with the checks, but I think it is the safest way. Cheers, Rob.
Oliver Hunt
Comment 3
2007-05-25 16:34:40 PDT
Comment on
attachment 14724
[details]
First attempt i find myself wondering whether else { + rootX += x().value(); + rootY += y().value(); } should account for tx, ty though the more i think about the less i think it should.. hmmm... also the += can just be + now fianlly, the layout test in this case can *probably* be text only... eg. eventController.dumpAsText or somthing
Oliver Hunt
Comment 4
2007-05-27 03:04:45 PDT
Comment on
attachment 14724
[details]
First attempt R=me, following discussion on irc pixel test is necessary as screenctm and layout/painting follow completely different paths
Oliver Hunt
Comment 5
2007-05-27 13:01:26 PDT
Landed
r21820
Eric Seidel (no email)
Comment 6
2007-10-02 10:19:33 PDT
svg/custom/rootmost-svg-xy-attrs seems to be failing on feature branch. Perhaps this patch was forgotten during the merge?
Eric Seidel (no email)
Comment 7
2007-10-02 19:51:12 PDT
Created
attachment 16510
[details]
new fix for feature-branch
Eric Seidel (no email)
Comment 8
2007-10-02 21:36:33 PDT
Laded as
r25957
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug