        Reviewed by Oliver.

http://bugs.webkit.org/show_bug.cgi?id=13828
        x/y values on rootmost <svg> elements should be ignored

        Make sure that root-most <svg> elements do not take into account x/y.



Canonical link: https://commits.webkit.org/18215@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@21820 268f45cc-cd09-0410-ab3c-d52691b4dbfc